--- a/indexnav.html
+++ b/indexnav.html
@@ -10,6 +10,7 @@
   <link href="css/indesnav.css" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cinzel" rel="stylesheet"> 
 
 
 
@@ -104,7 +105,7 @@
 <section id="section_passion">
 <article class="container-fluid" id="container-interet">
 				<div class="row">
-          <h2><a name="passions"> Mes passions </a></h2>
+          <h2><a name="passion"> Mes passions </a></h2>
 					<div class="interet football col-sm-4">
 						<div class="coverinteret">
 							<p class="text-center">Football</p>
@@ -140,6 +141,7 @@
 
 <script src="vendor/jquery/jquery-3.2.1.min.js"></script>
 <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="scroll.js"></script>
 
 
 </body>
