--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
   <link href="vendor/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet"/>
   <link href="css/indesnav2.css" rel="stylesheet"/>
-  <link rel="icon" href="img/favicon5.ico"/>
+  <link rel="icon" href="img/favicon.ico"/>
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
@@ -27,7 +27,7 @@
             <span class="sr-only">Toggle navigation</span>
             <span class="glyphicon glyphicon-menu-hamburger"></span>
           </button>
-          <a class="navbar-brand"><img src="img/logot.png"/></a>
+          <a class="navbar-brand"><img src="img/logoThéo.png" id="logoh"/></a>
         </div>
 
         <div class="collapse navbar-collapse" id="bar-nav-principale">
@@ -58,7 +58,7 @@
       <div class="row">
         <article id="propos" class="col-md-4 col-lg-4 col-xs-12 col-sm-12">
           <h2 id="apropos"> <a name="about"> A propos </a></h2>
-          <p> Je m'appelle Théo Galiot. Originaire de la région Nord Pas-de-Calais, je suis né à Arras le 16 Juillet 1997. Depuis mon plus jeune âge, j'éprouve un intérêt certain pour l'informatique. Suite à diverses expériences, j'ai voulu poursuivre l'aventure à PopSchool Lens où j'ai appris pour la première fois à développer des sites Internet ainsi que des applications pour web et mobiles. J'ai pour intérêt d'exposer et pousser plus loin encore ma créativité; le domaine de l'informatique étant le l'endroit idéal pour approfondir et élargir mes compétences.</p>
+          <p> Je m'appelle Théo Galiot. Originaire de la région Nord Pas-de-Calais, je suis né à Arras le 16 Juillet 1997. Depuis mon plus jeune âge, j'éprouve un intérêt certain pour l'informatique. Suite à diverses expériences, j'ai voulu poursuivre l'aventure à PopSchool Lens où j'ai appris pour la première fois à développer des sites Internet ainsi que des applications pour web et mobiles. J'ai pour intérêt d'exposer et pousser plus loin encore ma créativité; le domaine de l'informatique étant l'univers idéal pour approfondir et élargir mes compétences.</p>
         </article>
         <article class="col-md-4 col-lg-4 col-xs-12 col-sm-12 text-center">
           <h2> </h2>
@@ -67,6 +67,7 @@
         <article class="col-md-4 col-lg-4 col-xs-12 col-sm-12">
           <h2 id="parcours"> <a name="parcours">Mon parcours </a> </h2>
           <dl>
+
             <dt> - Juin → Décembre 2017 : <p>Formation Pop School Lens Développeur Web/Mobile</p></dt>
             <dd></dd>
             <dt> - Janvier 2017 : <p>Aménageur d'intérieur SNCF La Madeleine</p></dt>
@@ -94,8 +95,8 @@
             <img src="img/wordpress.png" alt="Wordpress logo">
             <img src="img/prestashop.png" alt="Prestashop logo">
             <img src="img/drupal.png" alt="Drupal logo">
+            </div>
         </article>
-        </div>
       </div>
     </div>
   </div>
@@ -150,7 +151,7 @@
       <div class="top-border right"></div>
       <h1>Contactez-moi</h1>
       <p>Voici mon adresse mail pour que vous puissez me contacter </p>
-      <a id="email">galiotheo@hotmail.com</a>
+      <a href="mailto:galiotheo@hotmail.com" id="email">galiotheo@hotmail.com</a>
       <p> Vous retrouverez mes réseaux sociaux en <strong>bas de page</strong><br>
       Pour y avoir accès cliquez sur <strong>les icones </strong></p>
     </div>
